<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="30dp">

            <EditText
                android:id="@+id/teamText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/team7"
                android:inputType="text"
                android:padding="9dp"
                android:textColorHint="@color/add3" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="30dp">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:padding="9dp"
                android:textColorHint="@color/add3" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="30dp">

            <EditText
                android:id="@+id/passText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColorHint="@color/add3" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            app:cardCornerRadius="30dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="30dp">

                    <EditText
                        android:id="@+id/firstNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/nameUser1"
                        android:inputType="textPersonName|textCapWords"
                        android:padding="9dp"
                        android:textColorHint="@color/add3" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="30dp">

                    <EditText
                        android:id="@+id/nameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/nameUser2"
                        android:inputType="textPersonName|textCapWords"
                        android:padding="9dp"
                        android:textColorHint="@color/add3" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="30dp" >

                    <EditText
                        android:id="@+id/descText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:ems="10"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:hint="@string/acc3"
                        android:inputType="textMultiLine|textCapSentences"
                        android:maxLines="4"
                        android:padding="9dp"
                        android:textColorHint="@color/add3" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/selectPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/team8"
                    android:textColor="@color/add5"
                    android:textSize="18sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="30dp">

                    <Spinner
                        android:id="@+id/spinTypes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center|start" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnGO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/sign"
                    app:backgroundTint="@color/add4"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/teamIF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/open"
            android:textColor="@color/add4"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/signBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="onClickSignIn"
            android:text="@string/sign"
            app:backgroundTint="@color/add4"
            app:cornerRadius="20dp" />

    </LinearLayout>
</LinearLayout>