<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="25dp">

        <EditText
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/team1"
            android:inputType="textPersonName|textCapSentences"
            android:maxLines="1"
            android:padding="9dp"
            android:textColorHint="@color/add3" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="25dp" >

        <EditText
            android:id="@+id/teamName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/team7"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="9dp"
            android:textColorHint="@color/add3" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/teamDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="top"
            android:hint="@string/team2"
            android:inputType="textMultiLine|textPersonName|textCapSentences|textCapWords"
            android:minHeight="100dp"
            android:padding="9dp"
            android:textColorHint="@color/add3" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/teamType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/team3"
                android:inputType="textPersonName|textCapSentences"
                android:maxLines="1"
                android:padding="9dp"
                android:textColorHint="@color/add3" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/plusType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/plus"
            app:backgroundTint="@color/add4"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:minHeight="100dp"
        app:cardCornerRadius="30dp">

        <TextView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="13dp"
            android:textColor="@color/add6"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/teamType2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/team6"
                android:inputType="textPersonName|textCapSentences"
                android:maxLines="1"
                android:padding="9dp"
                android:textColorHint="@color/add3" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/plusType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/plus"
            app:backgroundTint="@color/add4"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:minHeight="100dp"
        app:cardCornerRadius="30dp">

        <TextView
            android:id="@+id/list2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="13dp"
            android:textColor="@color/add6"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="onClickTeam"
        android:text="@string/team4"
        app:backgroundTint="@color/add4"
        app:cornerRadius="20dp" />

</LinearLayout>